--- a/docker/config/grafana/provisioning/datasources/jaeger.yaml
+++ b/docker/config/grafana/provisioning/datasources/jaeger.yaml
@@ -6,8 +6,8 @@ apiVersion: 1
 
 datasources:
   - name: Jaeger
-    uid: webstore-traces
+    uid: jaeger-traces
     type: jaeger
-    url: http://jaeger:16686/jaeger/ui
+    url: http://jaeger-all-in-one:16686
     editable: true
     isDefault: false
