--- a/docker/config/grafana/provisioning/datasources/loki.yaml
+++ b/docker/config/grafana/provisioning/datasources/loki.yaml
@@ -2,7 +2,8 @@ apiVersion: 1
 datasources:
 - name: Loki
   type: loki
-  access: proxy 
+  access: proxy
+  uid: loki
   orgId: 1
   url: http://loki:3100
   basicAuth: false
