update to spring cloud alibaba 2023.0.3.3

--- a/gamification/src/main/resources/bootstrap.properties
+++ b/gamification/src/main/resources/bootstrap.properties
@@ -1,5 +1,9 @@
 spring.cloud.nacos.config.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
 spring.cloud.nacos.discovery.server-addr=${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+spring.cloud.nacos.password=nacos
+spring.cloud.nacos.username=nacos
+spring.cloud.nacos.discovery.password=${spring.cloud.nacos.password}
+spring.cloud.nacos.discovery.username=${spring.cloud.nacos.username}
 spring.cloud.nacos.config.prefix=application
 spring.cloud.nacos.config.group=DEFAULT_GROUP
 spring.cloud.nacos.config.file-extension=yml
