--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -8,5 +8,9 @@ spring:
         file-extension: yml
       discovery:
         server-addr: ${SPRING_CLOUD_NACOS_HOST:localhost}:8848
+        username: ${spring.cloud.nacos.username}
+        password: ${spring.cloud.nacos.password}
+      username: nacos
+      password: nacos
 
 
