add sentinel for flow control and circuitbreaker for api gateway based on route. If you doesnot care the sentinel-dashboard page problem for sentinel-dashboard, remove SentinelApplicationContextInitializer and SentinelAutoConfiguration which is treated as a temp solution fix.

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -24,6 +24,20 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+        </dependency>
+        <!--for sentinel dashboard gateway page bug start, please remove SentinelAutoConfiguration.java and SentinelApplicationContextInitializer.java if it is fixed for sentinel dashboard gateway pages -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+        <!--for sentinel dashboard gateway page bug end -->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
