--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -171,6 +171,15 @@ services:
       retries: 10
     networks:
       - microservices
+  sentinel-dashboard:
+    #image: bladex/sentinel-dashboard:latest
+    image: sentinel-dashboard:v1.8.8
+    container_name: sentinel-dashboard
+    ports:
+      - "8858:8080"
+    restart: always
+    networks:
+      - microservices
   #for traces
   zipkin:
     image: 'openzipkin/zipkin'
@@ -218,10 +227,17 @@ services:
     container_name: elasticsearch
     environment:
       discovery.type: single-node
-      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+      ES_JAVA_OPTS: "-Xms1024m -Xmx1024m"
       ELASTIC_PASSWORD: changeme
-      #xpack.security.enabled: true
+      xpack.security.enabled: false
       xpack.security.http.ssl.enabled: false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -265,7 +281,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 100M
+          memory: 300M
     restart: unless-stopped
     environment:
       - "GF_INSTALL_PLUGINS=grafana-opensearch-datasource"
