--- a/docker/config/grafana/provisioning/datasources/elasticsearch.yaml
+++ b/docker/config/grafana/provisioning/datasources/elasticsearch.yaml
@@ -3,6 +3,7 @@ apiVersion: 1
 datasources:
   - name: Elastic
     type: elasticsearch
+    uid: webstore-logs
     access: proxy
     url: http://elasticsearch:9200
     editable: true
