--- a/docker/config/grafana/provisioning/datasources/jaeger.yaml
+++ b/docker/config/grafana/provisioning/datasources/jaeger.yaml
@@ -6,8 +6,17 @@ apiVersion: 1
 
 datasources:
   - name: Jaeger
-    uid: jaeger-traces
+    uid: webstore-traces
     type: jaeger
-    url: http://jaeger-all-in-one:16686
+    url: http://jaeger:16686/jaeger/ui
     editable: true
     isDefault: false
+    jsonData:
+      tracesToLogsV2:
+        datasourceUid: webstore-logs
+        spanStartTimeShift: "-20m"
+        spanEndTimeShift: "20m"
+        filterByTraceID: true
+        filterBySpanID: true
+        customQuery: true
+        query: traceId:"$${__trace.traceId}" AND spanId:"$${__span.spanId}"
